--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">  
+
 </head>
 <body>
+    <article class="border-radius">
+      <picture>
+        <img class="border-radius" src="/images/image-qr-code.png" alt="qr code">
+      </picture>
 
-  Improve your front-end skills by building projects
+      <h2 class="centered">Improve your front-end skills by building projects </h2>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      <p class="grey centered">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level </p>
+    </article>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mahdi Karimian</a>.
   </div>
+
 </body>
 </html>
